RESOLVED FIXED59475
AnimationBase asserts if a test tries to pause during the delay phase
https://bugs.webkit.org/show_bug.cgi?id=59475
Summary AnimationBase asserts if a test tries to pause during the delay phase
Simon Fraser (smfr)
Reported 2011-04-26 11:38:43 PDT
Created attachment 91132 [details] Test I hit an assert at WebCore::AnimationBase::freezeAtTime(double) + 158 (AnimationBase.cpp:1381) with the test that will be attached.
Attachments
Test (1.04 KB, text/html)
2011-04-26 11:38 PDT, Simon Fraser (smfr)
no flags
Patch (4.64 KB, patch)
2011-07-12 08:59 PDT, Young Han Lee
no flags
Simon Fraser (smfr)
Comment 1 2011-04-26 12:00:52 PDT
m_startTime is still 0 if the transition is in the delay phase.
Chris Marrin
Comment 2 2011-04-27 10:56:38 PDT
Looking at the code, this only happens when using the pause API from DRT (or from embedding apps). The play-state property doesn't go through this code path, so there's no way to generate this error with content.
Simon Fraser (smfr)
Comment 3 2011-04-27 11:05:41 PDT
Right, the bug was failed about DRT. This bug prevents me from converting some time-consuming delay-related tests to use the pause API.
Young Han Lee
Comment 4 2011-07-12 08:59:57 PDT
Dean Jackson
Comment 5 2011-07-12 10:10:22 PDT
Comment on attachment 100494 [details] Patch This looks good to me. You might want to add an animation test for completeness. I can't wait until this API is improved.
Young Han Lee
Comment 6 2011-07-13 08:41:57 PDT
(In reply to comment #5) > (From update of attachment 100494 [details]) > This looks good to me. You might want to add an animation test for completeness. > > I can't wait until this API is improved. Thanks, Dean. I found a problem in following your advice(making an animation test). I'm afraid this patch does not work in an animation case. When an animation is in its delay phase, it should not affect its intrinsic style[1], but this patch is returning the start value of the animation. This is not a regression of this patch, as it is reproducible now. I'd like to fix this problem in another bug because this bug's title is so far away from the above animation bug, if you agree. [1] http://www.w3.org/TR/css3-animations/#animation-behavior-
WebKit Review Bot
Comment 7 2011-07-18 09:16:30 PDT
Comment on attachment 100494 [details] Patch Clearing flags on attachment: 100494 Committed r91187: <http://trac.webkit.org/changeset/91187>
WebKit Review Bot
Comment 8 2011-07-18 09:16:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.