AnimationBase asserts if a test tries to pause during the delay phase https://bugs.webkit.org/show_bug.cgi?id=59475

Patch by Young Han Lee <joybro@company100.net> on 2011-07-18
Reviewed by Simon Fraser.

There is no more assertion failure after r90765, but the testcase still fails due to
the miscalculation of the pauseTime. This patch pauses the animation at its startTime
if a test tries to pause it during the delay phase.

Source/WebCore:

Test: transitions/transition-in-delay-phase.html

* page/animation/AnimationBase.cpp:
(WebCore::AnimationBase::freezeAtTime):

LayoutTests:

* transitions/transition-in-delay-phase-expected.txt: Added.
* transitions/transition-in-delay-phase.html: Added.

Canonical link: https://commits.webkit.org/80437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91187 268f45cc-cd09-0410-ab3c-d52691b4dbfc